RepoInspection page created

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,7 +45,7 @@
 
         <div class="sidebar-section">
             <h3>🤖 Code Intelligence</h3>
-            <a href="#" class="nav-item" data-page="repo-inspection">
+            <a href="#" class="nav-item" data-page="repo_inspection">
                 <i class="fas fa-search"></i>
                 <span>Repo Inspection</span>
             </a>
