new page RepoCacheAnalysis added

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,6 +49,10 @@
                 <i class="fas fa-search"></i>
                 <span>Repo Inspection</span>
             </a>
+            <a href="#" class="nav-item" data-page="repo_cache_analysis">
+                <i class="fas fa-search-dollar"></i>
+                <span>Repo Cache Analysis</span>
+            </a>
             <a href="#" class="nav-item" data-page="image_to_code">
                 <i class="fas fa-image"></i>
                 <span>Image to Code</span>
