fix cache managment and adjust variables

--- a/apps/repo_cache_analysis/templates/repo_cache_analysis.html
+++ b/apps/repo_cache_analysis/templates/repo_cache_analysis.html
@@ -30,7 +30,7 @@
                     <form id="repo-form">
                         <div class="form-group">
                             <label for="repo_url" class="form-label">GitHub Repository URL:</label>
-                            <input type="text" id="repo_url" name="repo_url" value="https://github.com/GoogleCloudPlatform/microservices-demo" class="input-field">
+                            <input type="text" id="repo_url" name="repo_url" value="https://gitlab.com/gustavolapa/microservices-demo-ref" class="input-field">
                         </div>
                         <div class="form-group">
                             <label for="cache_ttl" class="form-label">Cache TTL (hours):</label>
